--- a/papers/gpce2013/gpce2013.tex
+++ b/papers/gpce2013/gpce2013.tex
@@ -9,6 +9,7 @@
 \usepackage{amsmath}
 \usepackage[utf8]{inputenc}
 \usepackage[unicode=true,hidelinks]{hyperref}
+\usepackage{graphicx}
 
 \input{macros}
 
@@ -116,9 +117,27 @@ our contribution. Section \ref{discussion} concludes.
 
 \subsection{Fat Languages}
 
+\begin{figure}
+  \centering
+  \includegraphics[width=3cm]{fat.pdf}
+  \caption{Fat language}
+\end{figure}
+
 \subsection{Thin Languages}
 
+\begin{figure}
+  \centering
+  \includegraphics[width=3cm]{thin.pdf}
+  \caption{Thin language}
+\end{figure}
+
 \subsection{Deeply Embedded Languages}
+
+\begin{figure}
+  \centering
+  \includegraphics[width=3cm]{lms.pdf}
+  \caption{Deeply embedded languages}
+\end{figure}
 
 Lightweight Modular Staging~\cite{Rompf12_LMSThesis} is a framework for defining deeply embedded DSLs in Scala. It
 has been used to define high-performance DSLs for parallel computing~\cite{Brown11_Parallel} and can be used to
