--- a/papers/gpce2013/gpce2013.tex
+++ b/papers/gpce2013/gpce2013.tex
@@ -60,11 +60,11 @@ that the business logic is scattered into heterogeneous client-side and server-s
 environments~\cite{Echeverria09_RIA,Kuuskeri09_PartitioningClientServer}. This gives less flexibility in the
 engineering process and requires a higher maintainance effort: once you decided to implement a feature on
 client-side, changing your *mind* means completely rewriting the feature on server-side (and \emph{vice versa}).
-Even worse, logic parts that need to run on both client-side and server-side are duplicated. For instance, HTML
-fragments may be built from the server-side when a page is requested by a client, but they may also be built from the
-client-side to perform an incremental update subsequent to an user action. How could developers write HTML fragment
-definitions once and render them on both client-side and server-side? The more interactive the application is, the
-more logic needs to be duplicated between the server-side and the client-side (explain why?).
+Even worse, logic parts that need to run on both client-side and server-side have to be duplicated. For instance,
+HTML fragments may be built from the server-side when a page is requested by a client, but they may also be built
+from the client-side to perform an incremental update subsequent to an user action. How could developers write HTML
+fragment definitions once and render them on both client-side and server-side? The more interactive the application
+is, the more logic needs to be duplicated between the server-side and the client-side (explain why?).
 
 Using the same programming language on both server-side and client-side can improve the software engineering
 process by enabling code reuse between both sides. Incidentally, the JavaScript language -- which is currently the
@@ -115,28 +115,58 @@ our contribution. Section \ref{discussion} concludes.
 
 \section{Related Work}
 
+Developers express programs using a language that is translated into a form executable on a target platform. This
+section presents different approaches for defining cross-platform languages.
+
 \subsection{Fat Languages}
+
+One way consists in hard-coding, in the language’s compiler, the transformation to each target platform. Figure
+\ref{fat-lang} depicts this process. In order to support a feature related to a specific domain, the whole compiler
+pipeline (parser, code generator, \etc) may have to be adapted. This approach gives \emph{fat} languages because
+a lot of concepts are defined at the language level. Examples of such languages are Links~\cite{Cooper07_Links},
+Opa and Dart~\cite{Griffith11_Dart}. These languages are difficult to extend because each concept is defined in the
+compiler, and modifying a compiler requires a high effort. Furthermore, these languages also require to support
+common abstraction and composition mechanisms, as general purpose languages do, in order to make it easier to write
+real programs. So they need to be at least general purpose languages. It means that for every problem you have to
+rewrite a full-featured programming language before addressing the concepts specific to the problem domain. This
+approach does not scale.
 
 \begin{figure}
   \centering
   \includegraphics[width=3cm]{fat.pdf}
   \caption{Fat language}
+  \label{fat-lang}
 \end{figure}
 
+\subsection{Domain Specific Languages}
+
+Problem: interoperability.
+
 \subsection{Thin Languages}
+
+Alternatively, one can define concepts relative to a specific domain as libraries on top of a thin general purpose
+language. Figure \ref{thin-lang} depicts this approach. The general purpose language is used as a host language that
+does not need to be modified if a new concept is introduced, because concepts are defined as libraries. However,
+this approach gives no opportunity to translate a concept efficiently, according to the host platform
+characteristics.
 
 \begin{figure}
   \centering
   \includegraphics[width=3cm]{thin.pdf}
   \caption{Thin language}
+  \label{thin-lang}
 \end{figure}
 
 \subsection{Deeply Embedded Languages}
+
+Figure \ref{dedsl} shows a last approach that tries to get the benifits of the two previous approaches, without
+their shortcomings.
 
 \begin{figure}
   \centering
   \includegraphics[width=3cm]{lms.pdf}
   \caption{Deeply embedded languages}
+  \label{dedsl}
 \end{figure}
 
 Lightweight Modular Staging~\cite{Rompf12_LMSThesis} is a framework for defining deeply embedded DSLs in Scala. It
@@ -146,159 +176,21 @@ generate JavaScript code~\cite{Kossakowski12_JsDESL}.
 \section{High-Level Abstractions Generating Efficient (and Heterogeneous) Code}
 \label{contribution}
 
-\subsection{Ad-Hoc Polymorphism}
-
-Because of the dynamically typed nature of JavaScript, when calling a function there is no proper way to select a
-specialized implementation according to the function’s parameters types. JavaScript is only able to dispatch
-according to a method receiver prototype, \eg{} if one writes \code{foo.bar()} the JavaScript runtime will look into
-the prototype of the \code{foo} object for a property named \code{bar} and will call it. So, the only way to achieve
-\emph{ad hoc} polymorphism on JavaScript objects consists in defining the polymorphic function on the prototypes of
-the objects. However, modifying existing object prototypes is considered bad
-practice~\cite{Zakas12_MaintainableJs}. Another way could consist in manually coding the dispatch logic, by
-registering supported data types at the beginning of the program execution, as described in section 2.4.3
-of~\cite{Abelson83_SICP}, but this solution is painful for developers and incurs a performance overhead.
-
-We propose to achieve \emph{ad hoc} polymorphism using
-typeclasses~\cite{Wadler89_AdhocPolymorphism,Odersky06_Typeclasses,Oliveira10_Typeclasses} so that it supports
-retroactive extension without modifying objects prototypes because it is type-directed: the dispatch happens at
-compile-time rather than at runtime.
-
-\begin{figure}
-\begin{lstlisting}[label=polymorphism,caption=Ad hoc polymorphism using typeclasses]
-// Interface
-case class Show[A](show: Rep[A => Node])
-
-// Polymorphic function
-def listWidget[A : Show](items: Rep[List[A]]): Rep[Node] = {
-  tag("ul")(
-    for (item <- items) yield {
-      tag("li")(implicitly[Show[A]].show(item))
-    }
-  )
-}
-
-// Type `User`
-type User = Record { val name: String; val age: Int }
-// Implementation of Show for a User
-implicit val showUser = Show[User] { user =>
-  tag("span", "class"->"user")(
-    text(user.name + "(" + user.age + " years)")
-  )
-}
-
-// Type `Article`
-type Article = Record { val name: String; val price: Double }
-// Implementation of Show for an Article
-implicit val showArticle = Show[Article] { article =>
-  tag("span")(
-    text(article.name),
-    tag("strong")(text(article.price + " Euros"))
-  )
-}
-
-// Main program
-def main(users: Rep[List[User]], articles: Rep[List[Article]]) = {
-  document.body.append(listWidget(users))
-  document.body.append(listWidget(articles))
-}
-\end{lstlisting}
-\end{figure}
-
-Listing \ref{polymorphism} demonstrates how to define a polymorphic \code{listWidget} function that returns a DOM
-tree containing the representation of a list of items. The \code{Show[A]} typeclass defines how to produce a DOM tree
-for a value of type \code{A}. It is used by the \code{listWidget} function to get the DOM fragments of the list
-items. The listing shows how to reuse the same \code{listWidget} function to show a list of users and a list of
-articles.
-
 \subsection{Monads Sequencing}
-
-
-The previous work on js-scala \cite{Kossakowski12_JsDESL} showed how to make asynchronous programming more
-convenient by making asynchronous calls looking like synchronous calls (\ie{} returning a value instead of taking a
-callback as parameter). This work was based on the Scala continuations compiler plugin. We claim that, although this
-programming model removes the “callback hell”, it can make the code hard to reason about because there is no explicit
-distinction between synchronous and asynchronous computations.
-
-We propose a DSL that explicitly reflects the asynchronous nature of computations in their types and provides methods
-turning them into first-class citizens. The DSL is monadic so we can solve the callback hell problem thanks to the
-Scala \code{for} notation.
-
-For instance, listing \ref{async-first-class} shows how the listing \ref{async-js} can be re-written using our DSL.
-The \code{createVertex} function now returns an asynchronous value instead of taking a callback as
-parameter. Then, the \code{for} expression allows us to get the vertex, when available, and to insert it on the user
-interface. By making the \code{createVertex} function return an asynchronous value instead of taking a callback as
-a parameter, the code is easier to modularize into loosely coupled parts.
-
-\begin{figure}
-\centering
-\begin{lstlisting}[caption=Asynchronous values are first class citizen,label=async-first-class]
-def createVertex(text: Rep[String]): Rep[Future[Vertex]] =
-  Ajax.post[Vertex]("/create", new Record { val content = text })
-
-for (vertex <- createVertex("Hello, World!")) {
-  addVertex(vertex)
-}
-\end{lstlisting}
-\end{figure}
-
-\begin{figure}
-\centering
-\begin{lstlisting}[caption=No callback hell,label=async-no-callback]
-for {
-  foo <- Ajax.get(fooUrl())
-  bar <- Ajax.get(barUrl(foo))
-  _ <- future(println("bar = " + bar))
-  baz <- Ajax.get(bazUrl(bar))
-} println(foo + bar + baz)
-\end{lstlisting}
-\end{figure}
-
-Listing \ref{async-no-callback} translates the callback hell example (listing \ref{async-callback-hell}) using
-our DSL. The \code{for} notation can intuitively be thought of as a sequencing notation: whenever the response of the
-first Ajax request is available, the next statement is executed, and so on. There is no nested callbacks and the
-order of execution is directly reflected by the order of statements.
-
-An asynchronous value of type \code{Rep[A]} is modelled by a value of type \code{Rep[Future[A]]}. Because Scala’s
-\code{for} notation is just syntactic sugar for methods \code{foreach}, \code{map} and \code{flatMap}, we are
-able to define our DSL by just defining these methods on \code{Rep[Future[A]]} values, with the following semantic:
-\begin{itemize}
-\item \code{foreach(f: Rep[A] => Rep[Unit]): Rep[Unit]}, eventually does something with the value when available~;
-\item \code{map(f: Rep[A] => Rep[B]): Rep[Future[B]]}, eventually transforms the value when available~;
-\item \code{flatMap(f: Rep[A] => Rep[Future[B]]): Rep[Future[B]]} also eventually transforms the value when
-available~;
-\end{itemize}
-
-Asynchronous values can be used and transformed using the \code{foreach}, \code{map} and \code{flatMap} methods,
-turning them into first-class
-citizens: functions can take them as parameters and return them. Consequently, it is easier to write concurrent code:
-listing \ref{async-parallel-1} shows how to run two parallel asynchronous computations and to do something with their
-results when both are available. Writing equivalent code in pure JavaScript is tedious because it requires that the
-callback passed to each asynchronous computation checks if the other has been completed before, and to store the
-value, when availalbe, in a shared place (so both callbacks can get the other’s value).
-
-\begin{figure}
-\begin{lstlisting}[caption=Parallel computations in Scala,label=async-parallel-1]
-val fooAsync = Ajax.get("/foo")
-val barAsync = Ajax.get("/bar")
-for {
-  foo <- fooAsync
-  bar <- barAsync
-} println(foo + bar)
-\end{lstlisting}
-\end{figure}
-
 
 As an illustration of the staging mechanism, we present a simple DSL to handle null references. This DSL provides an
 abstraction at the stage-level that is removed by optimization during the code generation.
 
 Null references are a known source of problems in programming languages~\cite{Hoare09_Null,Nanda09_Null}. For
-example, consider the following typical JavaScript code finding a particular widget in the page and a then particular
+example, consider the following typical JavaScript code finding a particular widget in the page and then a particular
 button in the widget:
 
 \begin{lstlisting}[language=JavaScript,label=null-unsafe,caption=Unsafe code]
-var loginWidget = document.querySelector("div.login");
-var loginButton = loginWidget.querySelector("button.submit");
-loginButton.addEventListener("click", function (e) { ... });
+var loginWidget =
+  document.querySelector("div.login");
+var loginButton =
+  loginWidget.querySelector("button.submit");
+loginButton.addEventListener("click", handler);
 \end{lstlisting}
 
 The native \code{querySelector} method returns \code{null} if no node matched the given selector in the document. If
@@ -306,11 +198,14 @@ we run the above code in a page where the widget is not present, it will throw a
 execution. We can write defensive code to handle \code{null} cases, but it leads to very cumbersome code:
 
 \begin{lstlisting}[language=JavaScript,label=null-defensive,caption=Defensive programming to handle null references]
-var loginWidget = document.querySelector("div.login");
+var loginWidget =
+  document.querySelector("div.login");
 if (loginWidget !== null) {
-  var loginButton = loginWidget.querySelector("button.submit");
+  var loginButton =
+    loginWidget.querySelector("button.submit");
   if (loginButton !== null) {
-    loginButton.addEventListener("click", function (e) { ... });
+    loginButton.
+      addEventListener("click", handler);
   }
 }
 \end{lstlisting}
@@ -350,17 +245,17 @@ returning a DOM fragment~;
 \item compiling a template is the same as compiling user code.
 \end{itemize}
 
-So the only remaining work consists in defining the DSL vocabulary to define DOM nodes. We provide a \code{tag}
-function to define a tag and a \code{text} function to define a text node.
+So the only remaining work consists in defining the DSL vocabulary to define DOM nodes. We provide a \code{el}
+function to define a tag and any \code{String} value is considered to be a text node.
 
 \begin{figure}
 \begin{lstlisting}[label=forest-hello,caption=DOM definition DSL]
 def vertexDom(v: Rep[Vertex]) =
-    tag("g", "class"->"vertex",
-             "transform"->("translate("+v.x+","+v.y+")"))(
-        tag("rect", "width"->v.width, "height"->v.height)(),
-        tag("text", "width"->v.width, "height"->v.height)(
-            text(v.content)
+    el("g", "class"->"vertex",
+            "transform"->("translate("+v.x+","+v.y+")"))(
+        el("rect", "width"->v.width, "height"->v.height)(),
+        el("text", "width"->v.width, "height"->v.height)(
+            v.content
         )
     )
 \end{lstlisting}
@@ -399,14 +294,76 @@ We are able to tackle the code sharing issues described in section \ref{assessme
 of our DSLs: dynamic content of templates is written using embedded DSLs too, so their translation into JavaScript
 and Scala is managed by their respective code generators.
 
+\subsection{Ad-Hoc Polymorphism}
+
+Because of the dynamically typed nature of JavaScript, when calling a function there is no proper way to select a
+specialized implementation according to the function’s parameters types. JavaScript is only able to dispatch
+according to a method receiver prototype, \eg{} if one writes \code{foo.bar()} the JavaScript runtime will look into
+the prototype of the \code{foo} object for a property named \code{bar} and will call it. So, the only way to achieve
+\emph{ad hoc} polymorphism on JavaScript objects consists in defining the polymorphic function on the prototypes of
+the objects. However, modifying existing object prototypes is considered bad
+practice~\cite{Zakas12_MaintainableJs}. Another way could consist in manually coding the dispatch logic, by
+registering supported data types at the beginning of the program execution, as described in section 2.4.3
+of~\cite{Abelson83_SICP}, but this solution is painful for developers and incurs a performance overhead.
+
+We propose to achieve \emph{ad hoc} polymorphism using
+typeclasses~\cite{Wadler89_AdhocPolymorphism,Odersky06_Typeclasses,Oliveira10_Typeclasses} so that it supports
+retroactive extension without modifying objects prototypes. The dispatch logic is type-directed and performed by the
+compiler, so there is no runtime overhead.
+
+\begin{figure}
+\begin{lstlisting}[label=polymorphism,caption=Ad hoc polymorphism using typeclasses]
+// Interface
+case class Show[A](show: Rep[A => Node])
+
+// Polymorphic function
+def listWidget[A](items: Rep[List[A]])
+      (implicit A: Show[A]): Rep[Node] =
+  el("ul")(
+    for (item <- items) yield {
+      el("li")(A.show(item))
+    }
+  )
+
+// Type `User`
+type User = Record {
+  val name: String
+  val age: Int
+}
+// Implementation of Show for a User
+implicit val showUser = Show[User] { user =>
+  el("span", "class"->"user")(
+    user.name + "(" + user.age + " years)"
+  )
+}
+
+// Main program
+def main(users: Rep[List[User]]) = {
+  document.body.append(listWidget(users))
+}
+\end{lstlisting}
+\end{figure}
+
+Listing \ref{polymorphism} demonstrates how to define a polymorphic \code{listWidget} function that returns a DOM
+tree containing the representation of a list of items. The \code{Show[A]} typeclass defines how to produce a DOM tree
+for a value of type \code{A}. It is used by the \code{listWidget} function to get the DOM fragments of the list
+items. The listing shows how to reuse the same \code{listWidget} function to show a list of users and a list of
+articles.
+
 \subsection{Selectors}
 
 querySelectorAll, getElementsByTagName, getElementsByClassName, getElementById, querySelector
 
 \section{Implementation?}
 
+See http://github.com/js-scala/js-scala.
+
 \section{Evaluation}
 \label{validation}
+
+We implemented several applications using js-scala. We also have written several implementations of a complete
+application, using different approaches to write the client and server sides, and compared the amount of code
+written, the runtime performances and the ability to modularize the code and to maintain it.
 
 \subsection{Real World Application}
 
