--- a/papers/gpce2013/macros.tex
+++ b/papers/gpce2013/macros.tex
@@ -49,7 +49,7 @@ then, types, while, use},%
   aboveskip=\smallskipamount,
   belowskip=\smallskipamount,
 %  basewidth={0.5em, 0.4em},%
-  basicstyle=\ttfamily\small,%
+  basicstyle=\ttfamily\scriptsize,%
   keywordstyle=\bfseries%\sffamily\bfseries,%
 %  keywordstyle=\sffamily\bfseries,%
 %  xleftmargin=0.5cm
